movieSpecification() fixed